--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
 
 		<div class="shadow">
 			<p align="center">
+          <a href="https://f-droid.org/en/packages/org.atalk.android/">
+            <img src="img/fdroid-logo.png" alt="F-Droid">nbsp;
+          </a>
 			    <a href="https://play.google.com/store/apps/details?id=org.atalk.android&hl=en">
-			        <img src="img/google_play.png" alt="Google PlayStore">
+			        <img src="img/google_play.png" alt="Google PlayStore">nbsp;
 			    </a>
 				<a href="https://www.youtube.com/watch?v=9w5WwphzgBc" class="fancybox animated wow flipInX" data-wow-duration="2s">
 					<img src="img/youtube.png" alt="YouTube">
